# badgerbot

badgerbot_ws/src/: CMakeLists.txt
badgerbot_ws/src/badger/robot_model/: CMakeLists.txt  package.xml
badgerbot_ws/src/badger/robot_model/launch/: box_world.launch  house_world.launch  robot_description.launch
badgerbot_ws/src/badger/robot_model/urdf/: badger.xacro  badger_robot.gazebo.xacro
badgerbot_ws/src/badger/robot_navigation/: CMakeLists.txt  package.xml
badgerbot_ws/src/badger/robot_slam/: package.xml
badgerbot_ws/src/badger/robot_slam/launch/: robot_slam.launch
badgerbot_ws/src/badger/robot_slam/rviz/: badger_view.rviz
badgerbot_ws/src/badger/robot_teleop/: CMakeLists.txt
badgerbot_ws/src/badger/robot_teleop/launch/: robot_teleop_key.launch
badgerbot_ws/src/badger/robot_teleop/nodes/: robot_teleop_key
src/badger/: Guide
src/badger/robot_model/launch/: world.launch
src/badger/robot_model/model/box/: model.sdf
src/badger/robot_model/worlds/: box.world
src/badger/robot_navigation/launch/: move_base.launch  robot_navigation.launch
src/badger/robot_navigation/rviz/: robot_navigation.rviz
src/badger/robot_slam/launch/: robot_gmapping.launch
src/badger/robot_teleop/: package.xml
