<?xml version="1.0"?>
<package format="2">
  <name>robot_navigation</name>
  <version>1.2.6</version>
  <description>
    The robot_navigation provides roslaunch scripts for starting the navigation.
  </description>
  <license>Apache 2.0</license>
  <author email="Javen.j.w.lin@gmail.com">Javen Lin</author>
  <author>Javen Lin</author>
  <maintainer email="Javen.j.w.lin@gmail.com">Javen Lin</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
</package>
