<?xml version="1.0"?>
<package format="2">
  <name>robot_slam</name>
  <version>1.2.6</version>
  <description>
    The robot_slam package provides roslaunch scripts for starting the SLAM
  </description>
  <license>Apache 2.0</license>
  <author email="Javen.j.w.lin@gmail.com">Javen Lin</author>
  <author>Javen Lin</author>
  <maintainer email="Javen.j.w.lin@gmail.com">Javen Lin</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
</package>
